<resources>
    <string name="app_name">Brain Fusion</string>

    <string name="tag_line">Enjoy the better way to learn and earn. Just on your phone</string>
    <string name="start_activity">Get Start</string>
    <string name="app_purpose">Start answering the simple questions and earn money. It doesn\'t matter that you have vast knowledge of things. Just you need is to use your creative mind.</string>
    <string name="game_rules">Game Rules</string>
    <string name="user_earning">Points: </string>
    <string name="access_features_label">Access all features just on one click!</string>
    <string name="btn_get_premium">Get Premium</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="try_again">Try Again</string>
    <string name="user_profile_placeholder_content_description">USER_PROFILE_PLACEHOLDER</string>
    <string name="points_label_text">Points:</string>
    <string name="points_earned">…</string>
    <string name="home_activity_rules_label">Rules</string>
    <string name="home_activity_levels_label">Levels</string>
    <string name="rule_title">Rule Title</string>
    <string name="rule_description">Rule Description</string>
    <string name="level_number_text">Level 1</string>
    <string name="sample">...</string>
    <string name="question_no">Question no : </string>
    <string name="question_count">1</string>
    <string name="swipe_up_for_next_question">Swipe Up for next question</string>
    <string name="question_image_content_description">QUESTION_IMAGE_CONTENT_DESCRIPTION</string>
    <string name="options_image_content_description">OPTIONS_IMAGE_CONTENT_DESCRIPTION</string>
    <string name="a">a)</string>
    <string name="b">b)</string>
    <string name="c">c)</string>
    <string name="level">Level</string>
    <string name="submit">Submit</string>
</resources>