<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color_dim"
    android:gravity="center"
    tools:context=".MainActivity">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/brain_animation"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_above="@id/text_tag_line"
        android:layout_centerHorizontal="true"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/start_animation" />


    <TextView
        android:id="@+id/text_tag_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_app_description"
        android:layout_marginHorizontal="10sp"
        android:layout_marginBottom="40dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/tag_line"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp" />


    <TextView
        android:id="@+id/text_app_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_start"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="50dp"
        android:text="@string/app_purpose"
        android:textAlignment="center"
        android:textColor="#A5A4A4" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/white"
        android:elevation="12dp"
        android:text="@string/start_activity"
        android:textColor="@color/main_color_dim"
        android:textStyle="bold"
        app:cornerRadius="12dp" />


</RelativeLayout>